<resources>
    <string name="app_name">Dev-intensive</string>
    <string name="profile_label_rating">Рейтинг</string>
    <string name="profile_label_respect">Уважение</string>
    <string name="profile_hint_repository">Репозиторий</string>
    <string name="profile_hint_about">О себе</string>
    <string name="profile_hint_last_name">Фамилия</string>
    <string name="profile_hint_first_name">Имя</string>

    <string name="error_invalid_repo">Невалидный адрес репозитория</string>
    <string name="action_search">Поиск</string>
    <string name="archive_chat_title">Архив чатов</string>
</resources>
