<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@null"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="16:9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_bg" />

    <ru.skillbranch.devintensive.ui.custom.CircleImageView android:id="@+id/iv_avatar"
        android:layout_width="@dimen/avatar_round_size"
        android:layout_height="@dimen/avatar_round_size"
        android:contentDescription="@null"
        android:src="@drawable/avatar_default"
        app:layout_constraintBottom_toTopOf="@id/tv_nick_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        app:layout_constraintVertical_chainStyle="packed" />

    <ImageButton android:id="@+id/btn_switch_theme"
        android:layout_width="@dimen/btn_round_size_40"
        android:layout_height="@dimen/btn_round_size_40"
        android:layout_marginEnd="32dp"
        android:background="@drawable/btn_round_bg"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
        app:layout_constraintEnd_toStartOf="@+id/iv_avatar"
        app:layout_constraintTop_toTopOf="@+id/iv_avatar"
        app:srcCompat="@drawable/ic_switch_day_night" />

    <ImageButton android:id="@+id/btn_edit"
        android:layout_width="@dimen/btn_round_size_40"
        android:layout_height="@dimen/btn_round_size_40"
        android:layout_marginStart="32dp"
        android:background="@drawable/btn_round_bg"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@+id/iv_avatar"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar"
        app:layout_constraintTop_toTopOf="@+id/iv_avatar"
        app:srcCompat="@drawable/ic_edit_black_24dp" />

    <TextView android:id="@+id/tv_nick_name"
        style="@style/Profile.Header.Nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/tv_rank"
        app:layout_constraintEnd_toEndOf="@+id/iv_avatar"
        app:layout_constraintStart_toStartOf="@+id/iv_avatar"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="John Doe" />

    <TextView android:id="@+id/tv_rank"
        style="@style/Profile.Header.Rank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/tv_nick_name"
        app:layout_constraintStart_toStartOf="@+id/tv_nick_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_nick_name"
        tools:text="Junior Android Developer" />

    <View android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="?attr/colorAccentedSurface"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <View android:id="@+id/view2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_normal_16"
        android:background="@color/color_divider_light"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <TextView android:id="@+id/tv_respect"
        style="@style/Profile.Metrics.Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_respect"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/view"
        app:layout_constraintStart_toEndOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="0" />

    <TextView android:id="@+id/textView4"
        style="@style/Profile.Metrics.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_label_respect"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/tv_respect"
        app:layout_constraintStart_toStartOf="@+id/tv_respect"
        app:layout_constraintTop_toBottomOf="@+id/tv_respect" />

    <TextView android:id="@+id/tv_rating"
        style="@style/Profile.Metrics.Value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_sp_24"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view"
        app:layout_constraintVertical_chainStyle="packed"
        tools:text="0" />

    <TextView android:id="@+id/textView6"
        style="@style/Profile.Metrics.Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_label_rating"
        app:layout_constraintBottom_toBottomOf="@+id/view"
        app:layout_constraintEnd_toEndOf="@+id/tv_rating"
        app:layout_constraintStart_toStartOf="@+id/tv_rating"
        app:layout_constraintTop_toBottomOf="@+id/tv_rating" />

    <ImageView android:id="@+id/imageView3"
        android:layout_width="@dimen/btn_round_size_40"
        android:layout_height="@dimen/btn_round_size_40"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_normal_16"
        android:contentDescription="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"
        app:srcCompat="@drawable/ic_avatar" />

    <com.google.android.material.textfield.TextInputLayout android:id="@+id/til1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_normal_16"
        android:layout_marginStart="@dimen/spacing_normal_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView3"
        app:layout_constraintTop_toTopOf="@+id/imageView3">

        <com.google.android.material.textfield.TextInputEditText android:id="@+id/et_first_name"
            style="@style/Profile.EditText.Single"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_hint_first_name"
            tools:text="John" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout android:id="@+id/til2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_normal_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/til1"
        app:layout_constraintTop_toBottomOf="@+id/til1">

        <com.google.android.material.textfield.TextInputEditText android:id="@+id/et_last_name"
            style="@style/Profile.EditText.Single"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_hint_last_name"
            tools:text="Doe" />
    </com.google.android.material.textfield.TextInputLayout>

    <View android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="5dp"
        android:background="?attr/colorDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til2" />

    <ImageView android:id="@+id/imageView4"
        android:layout_width="@dimen/btn_round_size_40"
        android:layout_height="@dimen/btn_round_size_40"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_normal_16"
        android:contentDescription="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider"
        app:srcCompat="@drawable/ic_about" />

    <com.google.android.material.textfield.TextInputLayout android:id="@+id/wr_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_normal_16"
        android:layout_marginStart="@dimen/spacing_normal_16"
        app:counterEnabled="false"
        app:counterMaxLength="128"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4">

        <com.google.android.material.textfield.TextInputEditText android:id="@+id/et_about"
            style="@style/Profile.EditText.MultiLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/profile_hint_about" />

    </com.google.android.material.textfield.TextInputLayout>

    <View android:id="@+id/divider2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="5dp"
        android:background="?attr/colorDivider"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/wr_about" />

    <ImageView android:id="@+id/imageView5"
        android:layout_width="@dimen/btn_round_size_40"
        android:layout_height="@dimen/btn_round_size_40"
        android:layout_marginStart="@dimen/spacing_normal_16"
        android:layout_marginTop="@dimen/spacing_normal_16"
        android:contentDescription="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider2"
        app:srcCompat="@drawable/ic_repo" />

    <com.google.android.material.textfield.TextInputLayout android:id="@+id/wr_repository"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_normal_16"
        android:layout_marginStart="@dimen/spacing_normal_16"
        app:layout_constraintEnd_toStartOf="@+id/ic_eye"
        app:layout_constraintStart_toEndOf="@+id/imageView5"
        app:layout_constraintTop_toTopOf="@+id/imageView5">

        <com.google.android.material.textfield.TextInputEditText android:id="@+id/et_repository"
            style="@style/Profile.EditText.Single"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:hint="@string/profile_hint_repository"
            android:inputType="textUri" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView android:id="@+id/ic_eye"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_normal_16"
        android:contentDescription="@null"
        app:layout_constraintBottom_toBottomOf="@+id/wr_repository"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/wr_repository"
        app:layout_constraintTop_toTopOf="@+id/wr_repository"
        app:srcCompat="@drawable/ic_eye_24dp" />

</androidx.constraintlayout.widget.ConstraintLayout>